--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </style>
   <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="phaser.min.js"></script>
+  <script type="text/javascript" src="lib/rndlib.js"></script>
   <script type="text/javascript" src="itemdb.js"></script>
   <script type="text/javascript" src="helper.js"></script>
   <script type="text/javascript" src="init.js"></script>
