--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     }
 
   </style>
-  <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+  <!-- <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script> -->
   <script type="text/javascript" src="phaser.min.js"></script>
   <script type="text/javascript" src="lib/rndlib.js"></script>
   <script type="text/javascript" src="itemdb.js"></script>
