Update to Phaser 2 Fullscreen and center things

--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
   <title>Item Quiz</title>
 
   <style>
+    body {
+      margin:0;
+    }
     #game_div {
-      width: 400px;
+      /* width: 400px; */
+      /* width: 66vh; */
       margin: auto;
       z-index:0;
     }
